--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,9 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+        sans-serif;
 }
 
 .logo {
@@ -29,5 +32,48 @@
 @media (prefers-reduced-motion: no-preference) {
     a:nth-of-type(2) .logo {
         animation: logo-spin infinite 20s linear;
+    }
+}
+
+.card {
+    /* background: linear-gradient(#02061785 0%, rgba(255, 255, 255, 0.08) 100%); */
+    /* background-color: rgba(255, 255, 255, 0.074); */
+    background: linear-gradient(
+        rgba(255, 255, 255, 0.05) 0%,
+        rgba(255, 255, 255, 0.08) 100%
+    );
+    -webkit-backdrop-filter: blur(30px);
+    backdrop-filter: blur(30px);
+}
+
+.mask {
+    background: linear-gradient(rgba(255, 255, 255, 0.1), transparent);
+}
+
+.bg-contacto {
+    /* Dark mode colors and gradient */
+    background: transparent; /* Fallback for browsers that don't support gradients */
+    background: linear-gradient(
+        135deg,
+        #12121280 25%,
+        #02061783 25%,
+        #02061783 50%,
+        #12121280 50%,
+        #12121280 75%,
+        #02061783 75%,
+        #02061783
+    );
+    background-size: 40px 40px;
+
+    /* Animation */
+    animation: move 4s linear infinite;
+}
+
+@keyframes move {
+    0% {
+        background-position: 0 0;
+    }
+    100% {
+        background-position: 40px 40px;
     }
 }
