--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 html {
-    scrollbar-color: #9ba9bc69 #020617;
+    scrollbar-color: #9ba9bc69 #fff;
     scrollbar-width: thin;
 }
 #root {
@@ -43,10 +43,11 @@ html {
 .card {
     /* background: linear-gradient(#02061785 0%, rgba(255, 255, 255, 0.08) 100%); */
     /* background-color: rgba(255, 255, 255, 0.074); */
-    background: linear-gradient(
+    /* background: linear-gradient(
         rgba(255, 255, 255, 0.05) 0%,
         rgba(255, 255, 255, 0.08) 100%
-    );
+    ); */
+    background-color: #ffffff7a;
     -webkit-backdrop-filter: blur(30px);
     backdrop-filter: blur(30px);
 }
@@ -63,13 +64,13 @@ html {
     background: transparent; /* Fallback for browsers that don't support gradients */
     background: linear-gradient(
         135deg,
-        #12121280 25%,
-        #02061783 25%,
-        #02061783 50%,
-        #12121280 50%,
-        #12121280 75%,
-        #02061783 75%,
-        #02061783
+        #ddd0ff3e 25%,
+        #fff 25%,
+        #fff 50%,
+        #ddd0ff3e 50%,
+        #ddd0ff3e 75%,
+        #fff 75%,
+        #fff
     );
     background-size: 40px 40px;
 
@@ -96,23 +97,26 @@ html {
 .header {
     position: sticky !important;
     top: 0 !important;
+    padding-top: 10px;
     z-index: 10 !important;
 }
 
 .nav {
-    background: #0c1f3b;
-    border-bottom-right-radius: 15px;
-    border-bottom-left-radius: 15px;
+    background: rgba(120, 120, 120, 0.2);
+    /* border-bottom-right-radius: 15px;
+    border-bottom-left-radius: 15px; */
+    border-radius: 25px;
     width: 95%;
     margin: 0 auto;
-    animation: enhance-header linear both;
+    backdrop-filter: blur(10px);
+    /* animation: enhance-header linear both;
     animation-timeline: scroll(root);
-    animation-range: 0 150px;
+    animation-range: 0 150px; */
 }
 .nav-item {
     transition: all 0.2s ease;
-    &:hover {
-        transform: translateY(-5px);
+    &:not(:active):hover {
+        transform: translateY(-2px);
     }
     &:active {
         transform: scale(0.8);
