--- a/src/App.css
+++ b/src/App.css
@@ -138,3 +138,8 @@ html {
         transition: all 0.5s ease;
     }
 }
+.blur-effect {
+    background: #ffffff79;
+    backdrop-filter: blur(15px);
+    filter: blur(15px);
+}
